[project]
name = "custom-diffusers"
description = "Custom diffusers"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "diffusers>=0.14.0",
    "torch"
]
version = "0.0"

[tool.setuptools]
package-dir = {"custom_diffusers" = "src/custom_diffusers"}

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py37"

[[tool.pysen.lint.mypy_targets]]
  paths = ["src/custom_diffusers", "tests"]
